# ComplexValuesLibary

./: CMakeLists.txt  complex.cpp  complex.h  main.cpp  rational.cpp  rational.h  test.h  test.txt
Tests/: ClassName.h
